[gd_scene load_steps=49 format=2]

[ext_resource path="res://mobiles/player.gd" type="Script" id=1]
[ext_resource path="res://mobiles/base_human_skeleton.tscn" type="PackedScene" id=2]
[ext_resource path="res://blender/mobiles/base_human/UpLedge.anim" type="Animation" id=3]
[ext_resource path="res://blender/mobiles/base_human/Walk.anim" type="Animation" id=4]
[ext_resource path="res://mobiles/player_camera.gd" type="Script" id=5]
[ext_resource path="res://mobiles/armature.gd" type="Script" id=6]
[ext_resource path="res://mobiles/state_machine.gd" type="Script" id=7]
[ext_resource path="res://mobiles/states/walk.gd" type="Script" id=8]
[ext_resource path="res://mobiles/states/idle.gd" type="Script" id=9]
[ext_resource path="res://mobiles/states/fall.gd" type="Script" id=10]
[ext_resource path="res://mobiles/states/jump.gd" type="Script" id=11]
[ext_resource path="res://mobiles/ledge_climb_sensor.gd" type="Script" id=12]
[ext_resource path="res://mobiles/states/hang.gd" type="Script" id=13]
[ext_resource path="res://blender/mobiles/base_human/Idle.anim" type="Animation" id=14]
[ext_resource path="res://blender/mobiles/base_human/HangLedge.anim" type="Animation" id=15]
[ext_resource path="res://mobiles/states/climb.gd" type="Script" id=16]
[ext_resource path="res://mobiles/armature_animator.gd" type="Script" id=17]
[ext_resource path="res://mobiles/effect_manager.gd" type="Script" id=18]
[ext_resource path="res://assets/misc/default_env.tres" type="Environment" id=19]
[ext_resource path="res://mobiles/states/emote.gd" type="Script" id=20]
[ext_resource path="res://blender/mobiles/base_human/Pose.anim" type="Animation" id=21]
[ext_resource path="res://abilities/hitbox.tscn" type="PackedScene" id=22]
[ext_resource path="res://mobiles/states/light_attack.gd" type="Script" id=23]
[ext_resource path="res://blender/mobiles/base_human/base_human_Plane028.mesh" type="ArrayMesh" id=24]
[ext_resource path="res://blender/mobiles/base_human/base_human_Plane027.mesh" type="ArrayMesh" id=25]
[ext_resource path="res://blender/mobiles/base_human/base_human_Plane013.mesh" type="ArrayMesh" id=26]
[ext_resource path="res://blender/mobiles/base_human/base_human_Plane015.mesh" type="ArrayMesh" id=27]
[ext_resource path="res://blender/mobiles/base_human/Jump.anim" type="Animation" id=28]
[ext_resource path="res://blender/mobiles/base_human/Fall.anim" type="Animation" id=29]
[ext_resource path="res://mobiles/step_detector.gd" type="Script" id=30]
[ext_resource path="res://mobiles/states/quickstep.gd" type="Script" id=31]
[ext_resource path="res://blender/mobiles/base_human/Quickstep_Left.anim" type="Animation" id=32]
[ext_resource path="res://blender/mobiles/base_human/Swipe.anim" type="Animation" id=33]
[ext_resource path="res://blender/mobiles/base_human/Quickstep_Right.anim" type="Animation" id=34]
[ext_resource path="res://blender/mobiles/base_human/Quickstep_Back.anim" type="Animation" id=35]
[ext_resource path="res://blender/mobiles/base_human/base_human_Plane012.mesh" type="ArrayMesh" id=36]
[ext_resource path="res://blender/mobiles/base_human/Quickstep_Forward.anim" type="Animation" id=37]
[ext_resource path="res://blender/mobiles/base_human/Fist_Combo_1.anim" type="Animation" id=38]
[ext_resource path="res://blender/mobiles/base_human/Fist_Idle.anim" type="Animation" id=39]
[ext_resource path="res://blender/mobiles/base_human/Fist_Combo_2.anim" type="Animation" id=40]
[ext_resource path="res://blender/mobiles/base_human/Fist_Combo_3.anim" type="Animation" id=41]

[sub_resource type="CapsuleShape" id=6]
radius = 0.453421

[sub_resource type="CylinderShape" id=10]
radius = 0.0914506
height = 0.762261

[sub_resource type="AnimationNodeAnimation" id=7]
resource_local_to_scene = true
animation = "Idle"

[sub_resource type="AnimationNodeOneShot" id=18]

[sub_resource type="AnimationNodeOneShot" id=8]
resource_local_to_scene = true
fadein_time = 0.0
fadeout_time = 0.0

[sub_resource type="AnimationNodeBlendTree" id=17]
resource_local_to_scene = true
graph_offset = Vector2( 0, 258.333 )
nodes/Action/node = SubResource( 7 )
nodes/Action/position = Vector2( 240, 360 )
nodes/OneShot/node = SubResource( 8 )
nodes/OneShot/position = Vector2( 460, 240 )
"nodes/OneShot 2/node" = SubResource( 18 )
"nodes/OneShot 2/position" = Vector2( 240, 133.333 )
nodes/output/position = Vector2( 720, 240 )
node_connections = [ "output", 0, "OneShot", "OneShot", 0, "OneShot 2", "OneShot", 1, "Action" ]

[sub_resource type="CylinderShape" id=9]
radius = 0.199089

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.978329, 0 )
shape = SubResource( 6 )

[node name="Armature" type="Spatial" parent="."]
script = ExtResource( 6 )

[node name="Skeleton" parent="Armature" instance=ExtResource( 2 )]
bones/64/bound_children = [ NodePath("Weapon") ]

[node name="Weapon" type="BoneAttachment" parent="Armature/Skeleton"]
transform = Transform( -1, 5.73695e-07, 3.83356e-06, 3.85032e-06, -2.93925e-06, 1.00001, 5.88596e-07, 1, 2.75671e-07, -0.338867, 0.887099, 0.023255 )
bone_name = "weapon.r"

[node name="Hitbox" parent="Armature/Skeleton/Weapon" instance=ExtResource( 22 )]
transform = Transform( -0.999999, 2.52201e-06, 5.06644e-07, -5.5134e-07, 7.82308e-07, 1, 2.58068e-06, 0.999994, 1.89989e-06, -0.343684, -0.0232607, -0.887091 )

[node name="CollisionShape2" type="CollisionShape" parent="Armature/Skeleton/Weapon/Hitbox"]
transform = Transform( 1, 7.35162e-14, 7.56935e-14, 2.74592e-14, -0.0291777, 0.999574, -2.82724e-14, -0.999574, -0.0291777, -0.338367, 0.876543, 0.305479 )
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="Armature/Skeleton"]
mesh = ExtResource( 24 )
material/0 = null
material/1 = null

[node name="MeshInstance2" type="MeshInstance" parent="Armature/Skeleton"]
mesh = ExtResource( 26 )
material/0 = null
material/1 = null
material/2 = null

[node name="MeshInstance3" type="MeshInstance" parent="Armature/Skeleton"]
mesh = ExtResource( 25 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null

[node name="MeshInstance5" type="MeshInstance" parent="Armature/Skeleton"]
mesh = ExtResource( 36 )
material/0 = null

[node name="MeshInstance4" type="MeshInstance" parent="Armature/Skeleton"]
mesh = ExtResource( 27 )
material/0 = null
material/1 = null
material/2 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="Armature"]
root_node = NodePath("../..")
playback_process_mode = 0
anims/Fall = ExtResource( 29 )
anims/Fist_Combo_1 = ExtResource( 38 )
anims/Fist_Combo_2 = ExtResource( 40 )
anims/Fist_Combo_3 = ExtResource( 41 )
anims/Fist_Idle = ExtResource( 39 )
anims/HangLedge = ExtResource( 15 )
anims/Idle = ExtResource( 14 )
anims/Jump = ExtResource( 28 )
anims/Pose = ExtResource( 21 )
anims/Quickstep_Back = ExtResource( 35 )
anims/Quickstep_Forward = ExtResource( 37 )
anims/Quickstep_Left = ExtResource( 32 )
anims/Quickstep_Right = ExtResource( 34 )
anims/Swipe = ExtResource( 33 )
anims/UpLedge = ExtResource( 3 )
anims/Walk = ExtResource( 4 )
script = ExtResource( 17 )

[node name="AnimationTree" type="AnimationTree" parent="Armature/AnimationPlayer"]
tree_root = SubResource( 17 )
anim_player = NodePath("..")
active = true
process_mode = 0
root_motion_track = NodePath("Armature/Skeleton:root")
parameters/OneShot/active = false
"parameters/OneShot 2/active" = false

[node name="Sensors" type="Spatial" parent="Armature"]

[node name="LedgeClimb" type="Spatial" parent="Armature/Sensors"]
script = ExtResource( 12 )

[node name="Wall" type="RayCast" parent="Armature/Sensors/LedgeClimb"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.20935, 0 )
enabled = true
cast_to = Vector3( 0, 0, 1 )

[node name="Over" type="RayCast" parent="Armature/Sensors/LedgeClimb"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.49674, 0 )
enabled = true
cast_to = Vector3( 0, 0, 1 )

[node name="Step" type="Spatial" parent="Armature/Sensors"]
script = ExtResource( 30 )

[node name="Step" type="RayCast" parent="Armature/Sensors/Step"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.162998, 0 )
enabled = true
cast_to = Vector3( 0, 0, 0.5 )

[node name="Over" type="RayCast" parent="Armature/Sensors/Step"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.504254, 0 )
enabled = true
cast_to = Vector3( 0, 0, 0.6 )

[node name="Ground" type="RayCast" parent="Armature/Sensors"]
enabled = true

[node name="Hitbox" parent="Armature" instance=ExtResource( 22 )]
state = 1

[node name="CollisionShape" parent="Armature/Hitbox" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.06673, 0 )
shape = SubResource( 9 )

[node name="CameraPivot" type="Spatial" parent="."]
script = ExtResource( 5 )

[node name="Behind70" type="Position3D" parent="CameraPivot"]
transform = Transform( -0.987125, 0.0400545, -0.154853, 0.00410342, 0.97416, 0.22582, 0.159897, 0.222277, -0.961783, -0.598677, 2.25562, -2.54162 )
__meta__ = {
"_editor_description_": ""
}

[node name="Focus90" type="Position3D" parent="CameraPivot"]
transform = Transform( -0.987125, 0.0400545, -0.154853, 0.00410341, 0.97416, 0.22582, 0.159897, 0.222277, -0.961783, -0.566122, 2.31009, -2.48416 )

[node name="Wide100" type="Position3D" parent="CameraPivot"]
transform = Transform( -1, -1.51808e-08, 8.60946e-08, 2.22565e-08, 0.90815, 0.418644, -8.45422e-08, 0.418644, -0.90815, 0.15, 4.82786, -2.57053 )

[node name="Reflex90" type="Position3D" parent="CameraPivot"]
transform = Transform( 0.276275, -0.165551, 0.946713, -1.50591e-08, 0.985052, 0.172256, -0.961079, -0.0475899, 0.272145, 2.03183, 1.66898, 2 )

[node name="Finisher90" type="Position3D" parent="CameraPivot"]
transform = Transform( -0.734201, 0.120661, -0.668124, 0.00609657, 0.985213, 0.171227, 0.678905, 0.121642, -0.72408, -2.6039, 2.12036, -1.03794 )

[node name="Vertical" type="SpringArm" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2043, 0 )
spring_length = -4.0

[node name="Camera" type="Camera" parent="CameraPivot/Vertical"]
transform = Transform( -0.987125, 0.0400545, -0.154853, 0.00410342, 0.97416, 0.22582, 0.159897, 0.222277, -0.961783, -0.566122, 2.25022, -2.48416 )
environment = ExtResource( 19 )
h_offset = 0.02
far = 2000.0
__meta__ = {
"_editor_description_": ""
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="Hang" type="Node" parent="StateMachine"]
script = ExtResource( 13 )

[node name="Climb" type="Node" parent="StateMachine"]
script = ExtResource( 16 )

[node name="Emote" type="Node" parent="StateMachine"]
script = ExtResource( 20 )

[node name="LightAttack" type="Node" parent="StateMachine"]
script = ExtResource( 23 )

[node name="Quickstep" type="Node" parent="StateMachine"]
script = ExtResource( 31 )

[node name="StateLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
align = 1

[node name="EffectManager" type="Spatial" parent="."]
script = ExtResource( 18 )

[editable path="Armature/Hitbox"]
